[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Statistics.gd" type="Script" id=1]

[node name="Statistics" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 14.0
text = "How long can you wait for Godot?"

[node name="LayoutHbox" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0

[node name="TimeLabel" type="Label" parent="LayoutHbox"]
margin_right = 94.0
margin_bottom = 14.0
text = "Waiting since: "

[node name="ElapsedTimeLabel" type="Label" parent="LayoutHbox"]
margin_left = 98.0
margin_right = 106.0
margin_bottom = 14.0
text = "0"

[node name="StopWaitingButton" type="Button" parent="."]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 56.0
text = "Stop waiting for Godot!"

[connection signal="pressed" from="StopWaitingButton" to="." method="_on_StopWaitingButton_pressed"]
